# FormulAI

./: .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
api/: main.py  schemas.py
api/chatbot/: agent.py  tools.py
config/: __init__.py  circuits.json  settings.py
dashboard/: main.py
dashboard/assets/Circuit/: 2026trackbakudetailed.avif  2026trackhungaroringdetailed.avif  2026tracklasvegasdetailed.avif  2026trackmexicocitydetailed.avif  2026trackmiamidetailed.avif  2026trackmontrealdetailed.avif  2026trackmonzadetailed.avif  2026tracksakhirdetailed.avif  2026trackshanghaidetailed.avif  2026tracksingaporedetailed.avif  2026trackspafrancorchampsdetailed.avif
dashboard/pages/: 01_Schedule.py  02_Results.py  03_Standings.py  04_Tracks.py  05_Teams.py  06_Predictions.py
dashboard/utils/: theme.py
data/: __init__.py  db.py  fastf1_client.py  ingest.py  jolpica_client.py  openf1_client.py  rolling_backtest_2024.json  rolling_backtest_2025.json  weather_client.py
features/: feature_store.py  live_race.py  pre_race.py
frontend/: download_lfs.js  install_lfs.sh  package-lock.json  package.json  pull_lfs.sh  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
models/: __init__.py  evaluate.py  stage1_prerace.py  stage2_live.py  stage3_ensemble.py  stage4_simulator.py  train.py
models/artifacts/: stage1_prerace.joblib
scripts/: backtest.py  evaluate_lap_convergence.py  ingest_historical.py  rolling_backtest.py  train_model.py  verify_simulation_drift.py
tests/: test_data_clients.py  test_models.py
(+49 files in other folders)
